# HyperCPU

./: .gitignore  .gitmodules  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  ROADMAP.md  conanfile.py  test.s
.aspect/cli/: config.yml
.github/: Dockerfile
.github/workflows/: distro-ci.yml  docker-autobuild.yml  mainline-compile.yml  mainline-format.yml  mainline-lint.yml  mainline-prepare.yml  mainline-test.yml  mainline.yml  run-tests-feature-branch.yml  testing.yml  version-increment.yml
examples/: compare.s  escape-sequences.s  hello-world-legacy.s  hello-world.s
foreign/: BUILD.bazel
src/Assembler/: BUILD.bazel  Main.cpp
src/Assembler/Core/: BinaryTransformer.cpp  Compiler.cpp  Parsers.cpp  StatementCompilers.cpp  Tokenizers.cpp
src/BacktraceProvider/: BUILD.bazel
src/Common/: Exit.hpp
src/Common/LanguageSpec/: Flags.hpp
src/Emulator/: BUILD.bazel  Main.cpp
src/Emulator/Core/CPU/: CPU.cpp  CPU.hpp  OperandsEvaluation.cpp  Stack.cpp
src/Emulator/Core/CPU/Decoders/: StdDecoder.cpp  StdDecoder.hpp
src/Emulator/Core/CPU/IO/: Simple.cpp
src/Emulator/Core/CPU/InstructionsImpl/: ADC.cpp  ADD.cpp  AND.cpp  ANDN.cpp  BSWAP.cpp  CMP.cpp  DIV.cpp  INC.cpp  LODSB.cpp  MOV.cpp  MUL.cpp  OR.cpp  SHFL.cpp  SHFR.cpp  STDSB.cpp  SUB.cpp
src/Emulator/Core/CPU/Interrupts/: InterruptHandler.cpp
src/Emulator/Core/MemoryController/: MemoryControllerST.hpp
src/Emulator/Misc/: overflow.hpp  smallest_type.hpp
src/Pog/: BUILD.bazel  Token.hpp
tests/: BUILD.bazel  fixtures.hpp
tests/Integration/: BUILD.bazel
tests/Integration/EmulatorCore/CPU/: CPU_ADC.cpp  CPU_ADD.cpp  CPU_AND.cpp  CPU_ANDN.cpp  CPU_BSWAP.cpp  CPU_CALL.cpp  CPU_CALLE.cpp  CPU_CALLGR.cpp  CPU_CALLL.cpp  CPU_CCRF.cpp  CPU_CMP.cpp  CPU_COVF.cpp  CPU_CUDF.cpp  CPU_DEC.cpp  CPU_DIV.cpp  CPU_HID.cpp  CPU_INC.cpp  CPU_INTR.cpp  CPU_IRET.cpp  CPU_JME.cpp  CPU_JMGR.cpp  CPU_JML.cpp  CPU_JMP.cpp  CPU_LOIVT.cpp  CPU_MOV.cpp  CPU_MUL.cpp  CPU_OR.cpp  CPU_POP.cpp  CPU_PUSH.cpp  CPU_READ.cpp  CPU_SHFL.cpp  CPU_SHFR.cpp  CPU_SUB.cpp  CPU_WRITE.cpp
tests/Integration/EmulatorCore/Exceptions/: Exceptions.cpp
tests/Modular/: BUILD.bazel
tests/Modular/EmulatorCore/Decoding/ADCInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/ADDInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/ANDInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/ANDNInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/BSWAPInstr/: R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CALLEInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CALLGRInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CALLInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CALLLInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CCRFInstr/: test_decoder_none.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CMPInstr/: M_R.cpp  RM_IMM.cpp  RM_M.cpp  RM_R.cpp  R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/COVFInstr/: test_decoder_none.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/CUDFInstr/: None.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/DECInstr/: R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/DIVInstr/: R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/Features/: AddressAddition.cpp
tests/Modular/EmulatorCore/Decoding/HALTInstr/: None.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/HIDInstr/: None.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/INCInstr/: R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/JMEInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/JMGRInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/JMLInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/JMPInstr/: test_decoder_imm.cpp  test_decoder_r.cpp  test_decoder_unsupported.cpp
tests/Modular/EmulatorCore/Decoding/MOVInstr/: M_R.cpp  RM_IMM.cpp  RM_M.cpp  RM_R.cpp  R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/MULInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/ORInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/READInstr/: IMM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/SHFLInstr/: R_IMM.cpp  R_R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/SHFRInstr/: R_IMM.cpp  R_R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/SUBInstr/: R_IMM.cpp  R_M.cpp  R_R.cpp  R_RM.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/Decoding/WRITEInstr/: R_IMM.cpp  R_R.cpp  Unsupported.cpp
tests/Modular/EmulatorCore/MemoryControllers/: ST.cpp
tests/Pog/: BUILD.bazel
tools/: increment_version.py
tools/bazel/: BUILD.bazel  lint.bzl  pch.bzl
tools/packaging/: BUILD.bazel  vars.bzl
