"HyperCPU"

module(
    name = "hyper-cpu",
    version = "0.5.2",
    compatibility_level = 1,
)

#########################
# Starlark dependencies #
#########################

# Rules for building cpp objects: shared & static libs, binaries etc.
bazel_dep(name = "rules_cc", version = "0.1.2")

# Bazel skylib: core library for starlark.
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Bazel helpers to include other projects.
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

# These rules provide hooks for compile_commands.json generation - useful for clangd.
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

# Rules for creating tarballs with our precious binaries.
bazel_dep(name = "rules_pkg", version = "1.1.0", dev_dependency = True)

# Rules to constraint buildsystem.
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)

# For formatting/linting.
bazel_dep(name = "aspect_rules_lint", version = "1.5.3", dev_dependency = True)

# Formal bazel itself.
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# Bazel deps are normally pulled from BCR (registry), but sometimes
# it is needed to fetch them elsewhere. This command does exactly that.
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# We use this for static analysis (and formatting).
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")

################################
# Actual HyperCPU dependencies #
################################

# These come from Google.
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "google_benchmark", version = "1.9.1")

# These do not come from Google but we love them still.
bazel_dep(name = "fmt", version = "11.2.0")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "libunwind", version = "1.8.1")
bazel_dep(name = "argparse", version = "3.2.0")
