load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "assembler_core",
    srcs = glob(
        ["**/*.cpp"],
        exclude = ["Main.cpp"],
    ),
    hdrs = glob(["**/*.hpp"]),
    visibility = ["//visibility:public"],
    deps = [
        "//foreign:eternal",
        "//foreign:hpool",
        "//src/Common:hcpu_common",
        "//src/PCH:pch_cstd",
        "//src/Pog:pog",
        "@fmt",
        "@spdlog",
    ],
)

cc_binary(
    name = "hcasm",
    srcs = ["Main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":assembler_core",
        "@argparse",
        "@re2",
    ],
)
