load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "emulator_core",
    srcs = glob(
        ["**/*.cpp"],
        exclude = ["Main.cpp"],
    ),
    hdrs = glob(["**/*.hpp"]),
    visibility = ["//visibility:public"],
    deps = [
        "//foreign:eternal",
        "//src/Assembler:assembler_core",
        "//src/PCH:pch_cstd",
        "//src/Pog:pog",
        "@fmt",
    ],
)

cc_binary(
    name = "hcemul",
    srcs = ["Main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":emulator_core",
        "@argparse",
    ],
)
