load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/bazel:pch.bzl", "precompiled_headers")

cc_library(
    name = "pog_core",
    hdrs = glob(
        ["**/*.hpp"],
        exclude = ["Pog.hpp"],
    ),
    visibility = ["//visibility:private"],
)

precompiled_headers(
    name = "pog",
    main = "Pog.hpp",
    visibility = ["//visibility:public"],
    deps = [
        ":pog_core",
        "@fmt",
        "@re2",
    ],
)
